feat: open prop 적용되도록 세팅

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>구름톤 미션 저장소</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header></header>
