--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       </div>
     </header>
     <main></main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer-content">
+        <p class="copyright">© 2024 publdaze</p>
+      </div>
+    </footer>
   </body>
 </html>
