fix: 헤더 이후 컴포넌트가 헤더와 겹치지 않고 다음에 위치하도록 position 변경

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>구름톤 딥다이브 미션 저장소</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@4.0.1/reset.min.css" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
